crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__destructuring-6.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let foo = ([a, b]) => a;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 24,
                    },
                },
                span: 0..24,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 23,
                                    },
                                },
                                span: 10..23,
                                kind: Lambda(
                                    Lambda {
                                        params: [
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 11,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 11..17,
                                                    kind: Array(
                                                        ArrayPat {
                                                            elems: [
                                                                Some(
                                                                    ArrayPatElem {
                                                                        pattern: Pattern {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 12,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 13,
                                                                                },
                                                                            },
                                                                            span: 12..13,
                                                                            kind: Ident(
                                                                                BindingIdent {
                                                                                    name: "a",
                                                                                    mutable: false,
                                                                                    span: 12..13,
                                                                                    loc: SourceLocation {
                                                                                        start: Position {
                                                                                            line: 0,
                                                                                            column: 12,
                                                                                        },
                                                                                        end: Position {
                                                                                            line: 0,
                                                                                            column: 13,
                                                                                        },
                                                                                    },
                                                                                },
                                                                            ),
                                                                            inferred_type: None,
                                                                        },
                                                                        init: None,
                                                                    },
                                                                ),
                                                                Some(
                                                                    ArrayPatElem {
                                                                        pattern: Pattern {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 15,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 16,
                                                                                },
                                                                            },
                                                                            span: 15..16,
                                                                            kind: Ident(
                                                                                BindingIdent {
                                                                                    name: "b",
                                                                                    mutable: false,
                                                                                    span: 15..16,
                                                                                    loc: SourceLocation {
                                                                                        start: Position {
                                                                                            line: 0,
                                                                                            column: 15,
                                                                                        },
                                                                                        end: Position {
                                                                                            line: 0,
                                                                                            column: 16,
                                                                                        },
                                                                                    },
                                                                                },
                                                                            ),
                                                                            inferred_type: None,
                                                                        },
                                                                        init: None,
                                                                    },
                                                                ),
                                                            ],
                                                            optional: false,
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: None,
                                                optional: false,
                                            },
                                        ],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 22,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                },
                                                span: 22..23,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 22,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 23,
                                                            },
                                                        },
                                                        span: 22..23,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
